--- a/Travel Goals page Project - Flexbox and more classes/Assets/index.html
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/index.html
@@ -53,20 +53,32 @@
                     <img src="./img/places/munich.jpg" alt="Munich football stadium in winter">
                     <p>MUNICH <strong>GERMANY</strong> </p>
 
-                </li>               
+                </li>
 
                 <li class="destination">
                     <img src="./img/places/barcelona.jpg" alt="Palm beach in Barcelona">
                     <p>BARCELONA <strong>ESPAIN</strong> </p>
                 </li>
-
             </ul>
-
         </section>
 
     </main>
 
-    <footer></footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://www.instagram.com">
+                    <img src="./img/icons/insta.png" alt="Instagram Logo">
+                </a>
+            </li>
+
+            <li>
+                <a href="https://www.facebook.com">
+                    <img src="./img/icons/facebook.png" alt="Facebook Logo">
+                </a>
+            </li>
+        </ul>
+    </footer>
 
 </body>
 
