initializing card content

--- a/Travel Goals page Project - Flexbox and more classes/Assets/places.html
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/places.html
@@ -33,6 +33,25 @@
 
     <main>
 
+        <ul>
+            <li>
+                <img src="./img/places/barcelona.jpg" alt="City of Barcelona">
+            </li>
+            <div class="item-content">
+                <h2>Barcelona</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
+                     officiis nostrum reprehenderit error aliquam asperiores rem voluptates 
+                     quaerat provident amet repellat quae aut excepturi, molestias, nisi tempore.
+                </p>
+            </div>
+            <div class="actions">
+                <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
+            </div>
+
+
+        </ul>
+
     </main>
 
 
