--- a/Travel Goals page Project - Flexbox and more classes/Assets/places.html
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/places.html
@@ -38,17 +38,35 @@
                 <img src="./img/places/barcelona.jpg" alt="City of Barcelona">
 
                 <div class="item-content">
-                    <h2>Barcelona</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
-                        officiis nostrum reprehenderit error aliquam asperiores rem voluptates
-                        quaerat provident amet repellat quae aut excepturi, molestias, nisi tempore.
-                    </p>
+                    <div>
+                        <h2>Barcelona</h2>
+                        <br>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
+                            officiis nostrum reprehenderit error.
+                        </p>
+                    </div>
+
                     <div class="actions">
                         <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
                     </div>
                 </div>
             </li>
+
+            <!-- <li>
+                <img src="./img/places/miami.jpg" alt="City of Miami">
+
+                <div class="item-content">
+                    <h2>Miami</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
+                        officiis nostrum reprehenderit error.
+                    </p>
+                    <div class="actions">
+                        <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
+                    </div>
+                </div>
+            </li> -->
         </ul>
 
     </main>
