setting anchor tag

--- a/Travel Goals page Project - Flexbox and more classes/Assets/places.html
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/places.html
@@ -48,7 +48,7 @@
                     </div>
 
                     <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Barcelona" target="_blank">Explore</a>
                     </div>
                 </div>
             </li>
