organizing city cards

--- a/Travel Goals page Project - Flexbox and more classes/Assets/index.html
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/index.html
@@ -50,8 +50,8 @@
                 </li>
 
                 <li class="destination">
-                    <img src="./img/places/munich.jpg" alt="Munich football stadium in winter">
-                    <p>MUNICH <strong>GERMANY</strong> </p>
+                    <img src="./img/places/Rio de Janeiro.jpg" alt="Munich football stadium in winter">
+                    <p>RIO DE JANEIRO <strong>BRAZIL</strong> </p>
 
                 </li>
 
