--- a/Travel Goals page Project - Flexbox and more classes/Assets/places.html
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/places.html
@@ -53,7 +53,177 @@
                 </div>
             </li>
 
-            
+            <li>
+                <img src="./img/places/Rio de Janeiro.jpg" alt="City of Rio">
+
+                <div class="item-content">
+                    <div>
+                        <h2>Rio de Janeiro</h2>
+                        <br>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
+                            officiis nostrum reprehenderit error.
+                        </p>
+                    </div>
+
+                    <div class="actions">
+                        <a href="https://en.wikipedia.org/wiki/Rio_de_Janeiro" target="_blank">Explore</a>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <img src="./img/places/munich.jpg" alt="City of Munich">
+
+                <div class="item-content">
+                    <div>
+                        <h2>Munich</h2>
+                        <br>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
+                            officiis nostrum reprehenderit error.
+                        </p>
+                    </div>
+
+                    <div class="actions">
+                        <a href="https://en.wikipedia.org/wiki/Munich" target="_blank">Explore</a>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <img src="./img/places/paris.jpg" alt="City of Paris">
+
+                <div class="item-content">
+                    <div>
+                        <h2>Paris</h2>
+                        <br>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
+                            officiis nostrum reprehenderit error.
+                        </p>
+                    </div>
+
+                    <div class="actions">
+                        <a href="https://en.wikipedia.org/wiki/Paris" target="_blank">Explore</a>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <img src="./img/places/hawaii.jpg" alt="City of Hawaii">
+
+                <div class="item-content">
+                    <div>
+                        <h2>Hawaii</h2>
+                        <br>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
+                            officiis nostrum reprehenderit error.
+                        </p>
+                    </div>
+
+                    <div class="actions">
+                        <a href="https://en.wikipedia.org/wiki/Hawaii" target="_blank">Explore</a>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <img src="./img/places/london.jpg" alt="City of London">
+
+                <div class="item-content">
+                    <div>
+                        <h2>London</h2>
+                        <br>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
+                            officiis nostrum reprehenderit error.
+                        </p>
+                    </div>
+
+                    <div class="actions">
+                        <a href="https://en.wikipedia.org/wiki/London" target="_blank">Explore</a>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <img src="./img/places/bali.jpg" alt="City of Bali">
+
+                <div class="item-content">
+                    <div>
+                        <h2>Bali</h2>
+                        <br>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
+                            officiis nostrum reprehenderit error.
+                        </p>
+                    </div>
+
+                    <div class="actions">
+                        <a href="https://en.wikipedia.org/wiki/Bali" target="_blank">Explore</a>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <img src="./img/places/miami.jpg" alt="City of Miami">
+
+                <div class="item-content">
+                    <div>
+                        <h2>Miami</h2>
+                        <br>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
+                            officiis nostrum reprehenderit error.
+                        </p>
+                    </div>
+
+                    <div class="actions">
+                        <a href="https://en.wikipedia.org/wiki/Miami" target="_blank">Explore</a>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <img src="./img/places/new-york-city.jpg" alt="City of New York">
+
+                <div class="item-content">
+                    <div>
+                        <h2>New York City</h2>
+                        <br>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
+                            officiis nostrum reprehenderit error.
+                        </p>
+                    </div>
+
+                    <div class="actions">
+                        <a href="https://en.wikipedia.org/wiki/New York City" target="_blank">Explore</a>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <img src="./img/places/sydney.jpg" alt="City of Sydney">
+
+                <div class="item-content">
+                    <div>
+                        <h2>Sydney</h2>
+                        <br>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
+                            officiis nostrum reprehenderit error.
+                        </p>
+                    </div>
+
+                    <div class="actions">
+                        <a href="https://en.wikipedia.org/wiki/Sydney" target="_blank">Explore</a>
+                    </div>
+                </div>
+            </li>
+
         </ul>
 
     </main>
