adjusting card places

--- a/Travel Goals page Project - Flexbox and more classes/Assets/places.html
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/places.html
@@ -73,11 +73,11 @@
             </li>
 
             <li>
-                <img src="./img/places/munich.jpg" alt="City of Munich">
+                <img src="./img/places/sydney.jpg" alt="City of Munich">
 
                 <div class="item-content">
                     <div>
-                        <h2>Munich</h2>
+                        <h2>Sydney</h2>
                         <br>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
@@ -86,7 +86,7 @@
                     </div>
 
                     <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Munich" target="_blank">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Sydney" target="_blank">Explore</a>
                     </div>
                 </div>
             </li>
@@ -206,11 +206,11 @@
             </li>
 
             <li>
-                <img src="./img/places/sydney.jpg" alt="City of Sydney">
+                <img src="./img/places/munich.jpg" alt="City of Sydney">
 
                 <div class="item-content">
                     <div>
-                        <h2>Sydney</h2>
+                        <h2>Munich</h2>
                         <br>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
@@ -219,7 +219,7 @@
                     </div>
 
                     <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Sydney" target="_blank">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Munich" target="_blank">Explore</a>
                     </div>
                 </div>
             </li>
