--- a/Travel Goals page Project - Flexbox and more classes/Assets/places.html
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/places.html
@@ -48,7 +48,7 @@
                     </div>
 
                     <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Barcelona" target="_blank">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Barcelona" target="_blank">Explore &#X21FE</a>
                     </div>
                 </div>
             </li>
@@ -67,7 +67,7 @@
                     </div>
 
                     <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Rio_de_Janeiro" target="_blank">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Rio_de_Janeiro" target="_blank">Explore &#X21FE</a>
                     </div>
                 </div>
             </li>
@@ -86,7 +86,7 @@
                     </div>
 
                     <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Sydney" target="_blank">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Sydney" target="_blank">Explore &#X21FE</a>
                     </div>
                 </div>
             </li>
@@ -105,7 +105,7 @@
                     </div>
 
                     <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Paris" target="_blank">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Paris" target="_blank">Explore &#X21FE</a>
                     </div>
                 </div>
             </li>
@@ -124,7 +124,7 @@
                     </div>
 
                     <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Hawaii" target="_blank">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Hawaii" target="_blank">Explore &#X21FE</a>
                     </div>
                 </div>
             </li>
@@ -143,7 +143,7 @@
                     </div>
 
                     <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/London" target="_blank">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/London" target="_blank">Explore &#X21FE</a>
                     </div>
                 </div>
             </li>
@@ -162,7 +162,7 @@
                     </div>
 
                     <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Bali" target="_blank">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Bali" target="_blank">Explore &#X21FE</a>
                     </div>
                 </div>
             </li>
@@ -181,7 +181,7 @@
                     </div>
 
                     <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Miami" target="_blank">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Miami" target="_blank">Explore &#X21FE</a>
                     </div>
                 </div>
             </li>
@@ -200,7 +200,7 @@
                     </div>
 
                     <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/New York City" target="_blank">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/New York City" target="_blank">Explore &#X21FE</a>
                     </div>
                 </div>
             </li>
@@ -219,7 +219,7 @@
                     </div>
 
                     <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Munich" target="_blank">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Munich" target="_blank">Explore &#X21FE</a>
                     </div>
                 </div>
             </li>
