--- a/Travel Goals page Project - Flexbox and more classes/Assets/places.html
+++ b/Travel Goals page Project - Flexbox and more classes/Assets/places.html
@@ -43,7 +43,7 @@
                         <br>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
-                            officiis nostrum reprehenderit error.
+                            officiis nostrum.
                         </p>
                     </div>
 
@@ -62,7 +62,7 @@
                         <br>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
-                            officiis nostrum reprehenderit error.
+                            officiis nostrum.
                         </p>
                     </div>
 
@@ -100,7 +100,7 @@
                         <br>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
-                            officiis nostrum reprehenderit error.
+                            officiis nostrum.
                         </p>
                     </div>
 
@@ -119,7 +119,7 @@
                         <br>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
-                            officiis nostrum reprehenderit error.
+                            officiis nostrum.
                         </p>
                     </div>
 
@@ -138,7 +138,7 @@
                         <br>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
-                            officiis nostrum reprehenderit error.
+                            officiis nostrum.
                         </p>
                     </div>
 
@@ -157,7 +157,7 @@
                         <br>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
-                            officiis nostrum reprehenderit error.
+                            officiis nostrum.
                         </p>
                     </div>
 
@@ -176,7 +176,7 @@
                         <br>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
-                            officiis nostrum reprehenderit error.
+                            officiis nostrum.
                         </p>
                     </div>
 
@@ -195,7 +195,7 @@
                         <br>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt et,
-                            officiis nostrum reprehenderit error.
+                            officiis nostrum.
                         </p>
                     </div>
 
