basic page setup

--- a/07-Project07 - Landing Page/assets/index.html
+++ b/07-Project07 - Landing Page/assets/index.html
@@ -14,20 +14,20 @@
         rel="stylesheet">
 </head>
 
-<body>
-
-    <h1>Test</h1>
-    <h2>Test</h2>
-    <h3>Test</h3>
-    <h4>Test</h4>
-    <h5>Test</h5>
-    <h6>Test</h6>
-
-
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, voluptates necessitatibus voluptas iusto,
-        quas est sequi error, dolores esse voluptatibus aliquam laudantium eos debitis accusantium. Maxime, natus. Sunt,
-        maxime esse.</p>
-
+<body class="main-bg">
+    <section class="main-bg section">
+        <div class="main-content">
+          <h1>Lorem</h1>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores totam numquam natus obcaecati perferendis soluta architecto quod sed saepe, corporis mollitia ducimus impedit minus quaerat id odit? Enim, architecto inventore.</p>
+        </div>
+      </section>
+    
+      <section class="white-bg section">
+        <div class="main-content">
+          <h1>Lorem</h1>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores totam numquam natus obcaecati perferendis soluta architecto quod sed saepe, corporis mollitia ducimus impedit minus quaerat id odit? Enim, architecto inventore.</p>
+        </div>
+      </section>
 </body>
 
 </html>
